deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: wanderlust
        labels:
                name: wanderlust
spec:
        replicas: 2
        selector:
                matchLabels:
                        name: wanderlust
        template:
                metadata:
                        labels:
                                name: wanderlust
                spec:
                        containers:
                                - name: wanderlust
                                  image: 992382848783.dkr.ecr.ap-south-1.amazonaws.com/sneha-server:latest
                                  ports:
                                          - containerPort: 8000
