service.yaml
apiVersion: v1
kind: Service
metadata:
        name: wanderlust-service
        labels:
                name: wanderlust
spec:
        ports:
                - port: 80
                  targetPort: 8000
        selector:
                name: wanderlust
        type: ClusterIP
